fixed transformer imports

--- a/Feature_Design/testing_custom_nlp_transformers.ipynb
+++ b/Feature_Design/testing_custom_nlp_transformers.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9060ac07",
+   "id": "1d795378",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fd28f19f",
+   "id": "c5853977",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "98bb8a20",
+   "id": "e0385cd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6303da10",
+   "id": "7ccfab7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c556539f",
+   "id": "752d7d93",
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1be02d06",
+   "id": "6012135a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "dff96903",
+   "id": "dfc7e716",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd8f6b71",
+   "id": "dc55dde9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "48bba0e3",
+   "id": "d3b95636",
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7f8c08b6",
+   "id": "102bfe58",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4f843608",
+   "id": "085a1f9e",
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a145630a",
+   "id": "21e060fe",
    "metadata": {},
    "outputs": [
     {
@@ -1568,7 +1568,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "484b1fdc",
+   "id": "ec1c36f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1601,7 +1601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "285c5fce",
+   "id": "48758498",
    "metadata": {},
    "outputs": [
     {
@@ -4302,7 +4302,275 @@
       "Iteration 50, inertia 219230.578125\n",
       "Iteration 51, inertia 219222.328125\n",
       "Iteration 52, inertia 219221.078125\n",
-      "Iteration 53, inertia 219219.671875\n"
+      "Iteration 53, inertia 219219.671875\n",
+      "Iteration 54, inertia 219218.359375\n",
+      "Iteration 55, inertia 219214.546875\n",
+      "Iteration 56, inertia 219211.46875\n",
+      "Iteration 57, inertia 219208.6875\n",
+      "Iteration 58, inertia 219196.59375\n",
+      "Iteration 59, inertia 219184.640625\n",
+      "Iteration 60, inertia 219177.96875\n",
+      "Iteration 61, inertia 219164.015625\n",
+      "Iteration 62, inertia 219139.859375\n",
+      "Iteration 63, inertia 219098.65625\n",
+      "Iteration 64, inertia 219068.65625\n",
+      "Iteration 65, inertia 219053.71875\n",
+      "Iteration 66, inertia 219032.84375\n",
+      "Iteration 67, inertia 219010.625\n",
+      "Iteration 68, inertia 218989.453125\n",
+      "Iteration 69, inertia 218974.671875\n",
+      "Iteration 70, inertia 218964.34375\n",
+      "Iteration 71, inertia 218955.703125\n",
+      "Iteration 72, inertia 218929.96875\n",
+      "Iteration 73, inertia 218907.78125\n",
+      "Iteration 74, inertia 218894.390625\n",
+      "Iteration 75, inertia 218892.015625\n",
+      "Iteration 76, inertia 218889.90625\n",
+      "Iteration 77, inertia 218887.59375\n",
+      "Iteration 78, inertia 218885.875\n",
+      "Iteration 79, inertia 218883.96875\n",
+      "Iteration 80, inertia 218880.71875\n",
+      "Iteration 81, inertia 218876.765625\n",
+      "Iteration 82, inertia 218874.234375\n",
+      "Iteration 83, inertia 218871.546875\n",
+      "Iteration 84, inertia 218867.296875\n",
+      "Iteration 85, inertia 218866.6875\n",
+      "Iteration 86, inertia 218864.046875\n",
+      "Iteration 87, inertia 218861.71875\n",
+      "Iteration 88, inertia 218860.578125\n",
+      "Iteration 89, inertia 218860.6875\n",
+      "Iteration 90, inertia 218860.921875\n",
+      "Iteration 91, inertia 218860.609375\n",
+      "Iteration 92, inertia 218860.578125\n",
+      "Iteration 93, inertia 218860.5625\n",
+      "Iteration 94, inertia 218860.296875\n",
+      "Iteration 95, inertia 218860.40625\n",
+      "Iteration 96, inertia 218860.21875\n",
+      "Iteration 97, inertia 218860.09375\n",
+      "Converged at iteration 97: center shift 9.02217038856179e-08 within tolerance 5.858885496854782e-06.\n",
+      "Initialization complete\n",
+      "Iteration 0, inertia 266343.53125\n",
+      "Iteration 1, inertia 230504.90625\n",
+      "Iteration 2, inertia 226007.375\n",
+      "Iteration 3, inertia 224048.265625\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 4, inertia 222713.953125\n",
+      "Iteration 5, inertia 221727.8125\n",
+      "Iteration 6, inertia 221059.421875\n",
+      "Iteration 7, inertia 220536.109375\n",
+      "Iteration 8, inertia 220109.5\n",
+      "Iteration 9, inertia 219829.78125\n",
+      "Iteration 10, inertia 219637.09375\n",
+      "Iteration 11, inertia 219440.140625\n",
+      "Iteration 12, inertia 219313.34375\n",
+      "Iteration 13, inertia 219244.265625\n",
+      "Iteration 14, inertia 219183.125\n",
+      "Iteration 15, inertia 219136.671875\n",
+      "Iteration 16, inertia 219083.65625\n",
+      "Iteration 17, inertia 219042.375\n",
+      "Iteration 18, inertia 218995.71875\n",
+      "Iteration 19, inertia 218957.484375\n",
+      "Iteration 20, inertia 218917.0625\n",
+      "Iteration 21, inertia 218878.09375\n",
+      "Iteration 22, inertia 218836.96875\n",
+      "Iteration 23, inertia 218816.484375\n",
+      "Iteration 24, inertia 218797.65625\n",
+      "Iteration 25, inertia 218789.921875\n",
+      "Iteration 26, inertia 218778.1875\n",
+      "Iteration 27, inertia 218773.0\n",
+      "Iteration 28, inertia 218769.6875\n",
+      "Iteration 29, inertia 218761.171875\n",
+      "Iteration 30, inertia 218754.703125\n",
+      "Iteration 31, inertia 218753.9375\n",
+      "Iteration 32, inertia 218753.171875\n",
+      "Iteration 33, inertia 218751.703125\n",
+      "Iteration 34, inertia 218750.625\n",
+      "Iteration 35, inertia 218745.359375\n",
+      "Iteration 36, inertia 218741.15625\n",
+      "Iteration 37, inertia 218739.90625\n",
+      "Iteration 38, inertia 218739.625\n",
+      "Iteration 39, inertia 218740.0625\n",
+      "Iteration 40, inertia 218739.78125\n",
+      "Iteration 41, inertia 218738.59375\n",
+      "Iteration 42, inertia 218738.515625\n",
+      "Iteration 43, inertia 218735.625\n",
+      "Iteration 44, inertia 218734.796875\n",
+      "Iteration 45, inertia 218732.71875\n",
+      "Iteration 46, inertia 218731.0\n",
+      "Iteration 47, inertia 218728.171875\n",
+      "Iteration 48, inertia 218721.546875\n",
+      "Iteration 49, inertia 218714.75\n",
+      "Iteration 50, inertia 218710.296875\n",
+      "Iteration 51, inertia 218704.234375\n",
+      "Iteration 52, inertia 218701.265625\n",
+      "Iteration 53, inertia 218698.09375\n",
+      "Iteration 54, inertia 218698.078125\n",
+      "Iteration 55, inertia 218697.75\n",
+      "Iteration 56, inertia 218696.078125\n",
+      "Iteration 57, inertia 218695.703125\n",
+      "Iteration 58, inertia 218695.5\n",
+      "Iteration 59, inertia 218695.484375\n",
+      "Iteration 60, inertia 218695.03125\n",
+      "Iteration 61, inertia 218695.046875\n",
+      "Iteration 62, inertia 218695.109375\n",
+      "Converged at iteration 62: strict convergence.\n",
+      "Initialization complete\n",
+      "Iteration 0, inertia 267991.1875\n",
+      "Iteration 1, inertia 230849.609375\n",
+      "Iteration 2, inertia 224982.828125\n",
+      "Iteration 3, inertia 222536.359375\n",
+      "Iteration 4, inertia 221099.625\n",
+      "Iteration 5, inertia 220324.484375\n",
+      "Iteration 6, inertia 219908.609375\n",
+      "Iteration 7, inertia 219555.671875\n",
+      "Iteration 8, inertia 219339.078125\n",
+      "Iteration 9, inertia 219190.75\n",
+      "Iteration 10, inertia 219089.8125\n",
+      "Iteration 11, inertia 218999.359375\n",
+      "Iteration 12, inertia 218930.53125\n",
+      "Iteration 13, inertia 218863.765625\n",
+      "Iteration 14, inertia 218781.546875\n",
+      "Iteration 15, inertia 218731.03125\n",
+      "Iteration 16, inertia 218702.546875\n",
+      "Iteration 17, inertia 218683.359375\n",
+      "Iteration 18, inertia 218662.09375\n",
+      "Iteration 19, inertia 218641.65625\n",
+      "Iteration 20, inertia 218629.84375\n",
+      "Iteration 21, inertia 218616.453125\n",
+      "Iteration 22, inertia 218604.203125\n",
+      "Iteration 23, inertia 218594.359375\n",
+      "Iteration 24, inertia 218590.75\n",
+      "Iteration 25, inertia 218581.53125\n",
+      "Iteration 26, inertia 218571.40625\n",
+      "Iteration 27, inertia 218565.9375\n",
+      "Iteration 28, inertia 218555.875\n",
+      "Iteration 29, inertia 218546.546875\n",
+      "Iteration 30, inertia 218534.6875\n",
+      "Iteration 31, inertia 218522.921875\n",
+      "Iteration 32, inertia 218509.25\n",
+      "Iteration 33, inertia 218490.234375\n",
+      "Iteration 34, inertia 218475.09375\n",
+      "Iteration 35, inertia 218461.609375\n",
+      "Iteration 36, inertia 218444.40625\n",
+      "Iteration 37, inertia 218436.671875\n",
+      "Iteration 38, inertia 218430.90625\n",
+      "Iteration 39, inertia 218425.15625\n",
+      "Iteration 40, inertia 218422.765625\n",
+      "Iteration 41, inertia 218419.78125\n",
+      "Iteration 42, inertia 218412.1875\n",
+      "Iteration 43, inertia 218408.296875\n",
+      "Iteration 44, inertia 218406.75\n",
+      "Iteration 45, inertia 218404.890625\n",
+      "Iteration 46, inertia 218404.671875\n",
+      "Iteration 47, inertia 218403.796875\n",
+      "Iteration 48, inertia 218403.625\n",
+      "Iteration 49, inertia 218402.84375\n",
+      "Iteration 50, inertia 218402.890625\n",
+      "Iteration 51, inertia 218402.78125\n",
+      "Iteration 52, inertia 218402.6875\n",
+      "Iteration 53, inertia 218401.671875\n",
+      "Iteration 54, inertia 218401.640625\n",
+      "Iteration 55, inertia 218399.578125\n",
+      "Iteration 56, inertia 218398.734375\n",
+      "Iteration 57, inertia 218398.484375\n",
+      "Iteration 58, inertia 218397.90625\n",
+      "Iteration 59, inertia 218397.3125\n",
+      "Iteration 60, inertia 218395.59375\n",
+      "Iteration 61, inertia 218392.296875\n",
+      "Iteration 62, inertia 218389.78125\n",
+      "Iteration 63, inertia 218387.890625\n",
+      "Iteration 64, inertia 218386.609375\n",
+      "Iteration 65, inertia 218384.375\n",
+      "Iteration 66, inertia 218381.78125\n",
+      "Iteration 67, inertia 218377.296875\n",
+      "Iteration 68, inertia 218374.1875\n",
+      "Iteration 69, inertia 218371.328125\n",
+      "Iteration 70, inertia 218367.953125\n",
+      "Iteration 71, inertia 218362.609375\n",
+      "Iteration 72, inertia 218360.34375\n",
+      "Iteration 73, inertia 218359.203125\n",
+      "Iteration 74, inertia 218357.03125\n",
+      "Iteration 75, inertia 218356.84375\n",
+      "Iteration 76, inertia 218356.15625\n",
+      "Iteration 77, inertia 218355.28125\n",
+      "Iteration 78, inertia 218353.8125\n",
+      "Iteration 79, inertia 218353.515625\n",
+      "Iteration 80, inertia 218349.515625\n",
+      "Iteration 81, inertia 218348.78125\n",
+      "Iteration 82, inertia 218347.6875\n",
+      "Iteration 83, inertia 218346.6875\n",
+      "Iteration 84, inertia 218344.21875\n",
+      "Iteration 85, inertia 218329.046875\n",
+      "Iteration 86, inertia 218321.109375\n",
+      "Iteration 87, inertia 218319.4375\n",
+      "Iteration 88, inertia 218319.21875\n",
+      "Iteration 89, inertia 218318.5625\n",
+      "Iteration 90, inertia 218317.8125\n",
+      "Iteration 91, inertia 218316.75\n",
+      "Iteration 92, inertia 218317.109375\n",
+      "Iteration 93, inertia 218316.890625\n",
+      "Iteration 94, inertia 218316.5625\n",
+      "Iteration 95, inertia 218316.71875\n",
+      "Iteration 96, inertia 218316.703125\n",
+      "Iteration 97, inertia 218316.8125\n",
+      "Converged at iteration 97: center shift 3.091047346970299e-07 within tolerance 5.858885496854782e-06.\n",
+      "Initialization complete\n",
+      "Iteration 0, inertia 267755.34375\n",
+      "Iteration 1, inertia 229792.0625\n",
+      "Iteration 2, inertia 224725.921875\n",
+      "Iteration 3, inertia 222803.390625\n",
+      "Iteration 4, inertia 221907.0\n",
+      "Iteration 5, inertia 221328.421875\n",
+      "Iteration 6, inertia 220959.703125\n",
+      "Iteration 7, inertia 220729.609375\n",
+      "Iteration 8, inertia 220460.671875\n",
+      "Iteration 9, inertia 220234.34375\n",
+      "Iteration 10, inertia 220058.84375\n",
+      "Iteration 11, inertia 219923.5\n",
+      "Iteration 12, inertia 219840.171875\n",
+      "Iteration 13, inertia 219801.5625\n",
+      "Iteration 14, inertia 219769.28125\n",
+      "Iteration 15, inertia 219717.546875\n",
+      "Iteration 16, inertia 219672.859375\n",
+      "Iteration 17, inertia 219633.703125\n",
+      "Iteration 18, inertia 219612.078125\n",
+      "Iteration 19, inertia 219590.4375\n",
+      "Iteration 20, inertia 219566.59375\n",
+      "Iteration 21, inertia 219542.8125\n",
+      "Iteration 22, inertia 219528.796875\n",
+      "Iteration 23, inertia 219521.125\n",
+      "Iteration 24, inertia 219515.515625\n",
+      "Iteration 25, inertia 219508.734375\n",
+      "Iteration 26, inertia 219499.453125\n",
+      "Iteration 27, inertia 219493.484375\n",
+      "Iteration 28, inertia 219488.9375\n",
+      "Iteration 29, inertia 219485.4375\n",
+      "Iteration 30, inertia 219483.15625\n",
+      "Iteration 31, inertia 219480.390625\n",
+      "Iteration 32, inertia 219475.859375\n",
+      "Iteration 33, inertia 219471.796875\n",
+      "Iteration 34, inertia 219467.0\n",
+      "Iteration 35, inertia 219463.875\n",
+      "Iteration 36, inertia 219461.828125\n",
+      "Iteration 37, inertia 219460.3125\n",
+      "Iteration 38, inertia 219456.03125\n",
+      "Iteration 39, inertia 219453.453125\n",
+      "Iteration 40, inertia 219452.9375\n",
+      "Iteration 41, inertia 219451.703125\n",
+      "Iteration 42, inertia 219451.296875\n",
+      "Iteration 43, inertia 219451.1875\n",
+      "Iteration 44, inertia 219451.234375\n",
+      "Iteration 45, inertia 219451.078125\n",
+      "Iteration 46, inertia 219451.0\n",
+      "Iteration 47, inertia 219451.109375\n",
+      "Iteration 48, inertia 219451.125\n",
+      "Iteration 49, inertia 219451.03125\n",
+      "Converged at iteration 49: strict convergence.\n"
      ]
     }
    ],
@@ -4331,7 +4599,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "56dd8e2f",
+   "id": "eab88cb0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4339,7 +4607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67e6f704",
+   "id": "0162275b",
    "metadata": {},
    "outputs": [],
    "source": []
