added award feature extraction

--- a/Feature_Design/sandbox/dictionary.ipynb
+++ b/Feature_Design/sandbox/dictionary.ipynb
@@ -2,16 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "id": "1ba8ba4e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lnajt\\anaconda3\\envs\\Erdos_Institute\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3169: DtypeWarning: Columns (45,79,116,117) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
+     ]
+    }
+   ],
    "source": [
     "import gensim\n",
     "import re\n",
     "import nltk\n",
     "import pandas as pd\n",
-    "df = pd.read_csv(\"../../Data/subreddits.csv\", nrows = 1000)\n",
+    "df = pd.read_csv(\"../../Data/subreddit_WallStreetBets/full.csv\", nrows = 50000)\n",
     "\n",
     "regex = re.compile('[^a-zA-Z ]')\n",
     "\n",
@@ -34,167 +43,13 @@
     "dictionary = gensim.corpora.dictionary.Dictionary(documents = corpus)\n",
     "dictionary.filter_extremes(no_below = 10)\n",
     "word_dictionary = dict(dictionary)\n",
-    "word_dictionary"
+    "#word_dictionary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "4a880ad5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: 'a',\n",
-       " 1: 'for',\n",
-       " 2: 'his',\n",
-       " 3: 'man',\n",
-       " 4: 'after',\n",
-       " 5: 'did',\n",
-       " 6: 'go',\n",
-       " 7: 'the',\n",
-       " 8: 'where',\n",
-       " 9: 'is',\n",
-       " 10: 'so',\n",
-       " 11: 'your',\n",
-       " 12: 'all',\n",
-       " 13: 'has',\n",
-       " 14: 'it',\n",
-       " 15: 'my',\n",
-       " 16: 'since',\n",
-       " 17: 'bar',\n",
-       " 18: 'day',\n",
-       " 19: 'had',\n",
-       " 20: 'in',\n",
-       " 21: 'and',\n",
-       " 22: 'girlfriend',\n",
-       " 23: 'have',\n",
-       " 24: 'what',\n",
-       " 25: 'are',\n",
-       " 26: 'one',\n",
-       " 27: 'cant',\n",
-       " 28: 'i',\n",
-       " 29: 'like',\n",
-       " 30: 'only',\n",
-       " 31: 'was',\n",
-       " 32: 'year',\n",
-       " 33: 'between',\n",
-       " 34: 'whats',\n",
-       " 35: 'old',\n",
-       " 36: 'decade',\n",
-       " 37: 'ive',\n",
-       " 38: 'on',\n",
-       " 39: 'an',\n",
-       " 40: 'at',\n",
-       " 41: 'her',\n",
-       " 42: 'me',\n",
-       " 43: 'to',\n",
-       " 44: 'always',\n",
-       " 45: 'been',\n",
-       " 46: 'see',\n",
-       " 47: 'this',\n",
-       " 48: 'now',\n",
-       " 49: 'of',\n",
-       " 50: 'does',\n",
-       " 51: 'guy',\n",
-       " 52: 'ill',\n",
-       " 53: 'take',\n",
-       " 54: 'when',\n",
-       " 55: 'about',\n",
-       " 56: 'can',\n",
-       " 57: 'do',\n",
-       " 58: 'jokes',\n",
-       " 59: 'you',\n",
-       " 60: 'heard',\n",
-       " 61: 'who',\n",
-       " 62: 'today',\n",
-       " 63: 'with',\n",
-       " 64: 'know',\n",
-       " 65: 'why',\n",
-       " 66: 'its',\n",
-       " 67: 'that',\n",
-       " 68: 'we',\n",
-       " 69: 'friend',\n",
-       " 70: 'get',\n",
-       " 71: 'him',\n",
-       " 72: 'wife',\n",
-       " 73: 'time',\n",
-       " 74: 'asked',\n",
-       " 75: 'if',\n",
-       " 76: 'vision',\n",
-       " 77: 'make',\n",
-       " 78: 'as',\n",
-       " 79: 'say',\n",
-       " 80: 'into',\n",
-       " 81: 'walks',\n",
-       " 82: 'last',\n",
-       " 83: 'glasses',\n",
-       " 84: 'life',\n",
-       " 85: 'went',\n",
-       " 86: 'night',\n",
-       " 87: 'from',\n",
-       " 88: 'hear',\n",
-       " 89: 'new',\n",
-       " 90: 'out',\n",
-       " 91: 'really',\n",
-       " 92: 'sex',\n",
-       " 93: 'how',\n",
-       " 94: 'they',\n",
-       " 95: 'got',\n",
-       " 96: 'dad',\n",
-       " 97: 'tell',\n",
-       " 98: 'people',\n",
-       " 99: 'doctor',\n",
-       " 100: 'he',\n",
-       " 101: 'said',\n",
-       " 102: 'there',\n",
-       " 103: 'just',\n",
-       " 104: 'be',\n",
-       " 105: 'will',\n",
-       " 106: 'but',\n",
-       " 107: 'call',\n",
-       " 108: 'their',\n",
-       " 109: 'were',\n",
-       " 110: 'joke',\n",
-       " 111: 'hate',\n",
-       " 112: 'im',\n",
-       " 113: 'first',\n",
-       " 114: 'need',\n",
-       " 115: 'think',\n",
-       " 116: 'dont',\n",
-       " 117: 'guys',\n",
-       " 118: 'years',\n",
-       " 119: 'called',\n",
-       " 120: 'up',\n",
-       " 121: 'two',\n",
-       " 122: 'hindsight',\n",
-       " 123: 'going',\n",
-       " 124: 'told',\n",
-       " 125: 'ask',\n",
-       " 126: 'not',\n",
-       " 127: 'happy',\n",
-       " 128: 'resolution',\n",
-       " 129: 'next',\n",
-       " 130: 'havent',\n",
-       " 131: 'son',\n",
-       " 132: 'she',\n",
-       " 133: 'would',\n",
-       " 134: 'sub',\n",
-       " 135: 'doing'}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "705d814a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -202,7 +57,90 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "705d814a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "id": "aaf93926",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['all_awardings'] = df.all_awardings.apply(eval)\n",
+    "\n",
+    "award_types = set()\n",
+    "for awardings in df.all_awardings:\n",
+    "    for award in awardings:\n",
+    "        award_types.add(award['name'])\n",
+    "        \n",
+    "def count_award(award, awardings):\n",
+    "    counter = 0\n",
+    "    for given_award in awardings:\n",
+    "        if given_award['name'] == award:\n",
+    "            counter += given_award['count']\n",
+    "    return counter\n",
+    "\n",
+    "for award in award_types:\n",
+    "    df[\"award_\" + award] = df.all_awardings.apply(lambda awardings : count_award(award,awardings))\n",
+    "    \n",
+    "award_cols = [ \"award_\" + award for award in award_types]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "701628c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "80fb4c47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "award_NYE Ball Drop        1\n",
+       "award_Slice of π           1\n",
+       "award_Mr. Penguin          1\n",
+       "award_Snoovie Time         1\n",
+       "award_Rocket Toboggan      1\n",
+       "                        ... \n",
+       "award_Stonks Rising      105\n",
+       "award_Bless Up           110\n",
+       "award_Press F            128\n",
+       "award_Gold               398\n",
+       "award_Silver             843\n",
+       "Length: 98, dtype: int64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[award_cols].sum().sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "226e2b08",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b9b361c",
    "metadata": {},
    "outputs": [],
    "source": []
