added the beta shrinkage stuff

--- a/Feature_Design/testing_custom_author_properties_transformers.ipynb
+++ b/Feature_Design/testing_custom_author_properties_transformers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "1ac32447",
    "metadata": {},
    "outputs": [],
@@ -28,54 +28,40 @@
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
     "from sklearn.preprocessing import FunctionTransformer\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "df = pd.read_csv(\"../Data/subreddit_WallStreetBets/full.csv\", nrows = None)\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "38c74e77",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\lnajt\\anaconda3\\envs\\Erdos_Institute\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3169: DtypeWarning: Columns (79,88,117,118,119,122,123,124,125) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(\"../Data/wsb_full_not_deleted_withdt.csv\")\n",
-    "\n",
-    "df = df.loc[df.author != \"None\"]\n"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "d89501dc",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "df [\"created_datetime_utc\"] = df[\"created_utc\"].apply(datetime.utcfromtimestamp)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "a89bcc97",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df_cleaned = df[ [  'id', 'title', 'author', 'ups', 'created_datetime_utc']]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ccd10e6b",
    "metadata": {},
    "outputs": [],
@@ -83,38 +69,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "2765679b",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\n\\nfor summary_type in [\\'sum\\', \\'mean\\', \\'median\\', \\'count\\' ]:\\n    pop_agg = author_influence()\\n    pop_agg.kind = summary_type\\n    pop_agg.fit(df)\\n    df[\"agg\" + summary_type] = pop_agg.transform(df)\\n    print(\"finished with\", summary_type)\\n    \\ndf\\n\\n'"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "'''\n",
     "\n",
-    "for summary_type in ['sum', 'mean', 'median', 'count' ]:\n",
+    "for summary_type in ['beta_shrinkage_upvoteratio' ]:\n",
     "    pop_agg = author_influence()\n",
     "    pop_agg.kind = summary_type\n",
-    "    pop_agg.fit(df_cleaned)\n",
-    "    df_cleaned[\"agg\" + summary_type] = pop_agg.transform(df)\n",
+    "    pop_agg.fit(df)\n",
+    "    df[\"agg\" + summary_type] = pop_agg.transform(df)\n",
     "    print(\"finished with\", summary_type)\n",
-    "    \n",
-    "df_cleaned\n",
     "\n",
-    "'''\n",
+    "\n",
     "#"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f88bb25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    \n",
+    "df[['author', \"agg\" + summary_type]].sort_values(by = \"agg\" + summary_type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "325153b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pop_agg.global_params_beta\n",
+    "pop_agg.global_params* (1 - pop_agg.global_params)/df.upvote_ratio.std() - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8c9cad4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdbc8845",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a341a6f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pop_agg.author_df.sort_values(by = 'beta_mean', ascending = False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "816ee02d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4622eefc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -193,7 +229,8 @@
     "author_stat_features = FeatureUnion([('aggsum', author_influence(kind = 'sum')), \n",
     "                           ('aggmean', author_influence(kind = 'mean')), \n",
     "                           ('aggmedian', author_influence(kind = 'median')),\n",
-    "                            ('aggcount', author_influence(kind = 'count'))\n",
+    "                            ('aggcount', author_influence(kind = 'count')),\n",
+    "                            ('aggupvote_ratio', author_influence(kind = 'beta_shrinkage_upvoteratio')),\n",
     "                           \n",
     "                           ])\n",
     "# testing:\n",
@@ -434,9 +471,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:ML]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-ML-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -448,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
